// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSFeeOracle and HashConsensus events tests 🔴 CSFeeOracle: Consensus Hash Contract Set, Consensus Version Set, FeeDistributor Contract Set, Perf Leeway Set 1`] = `
[
  {
    "array": [
      "ethereum",
      5,
      [],
      4,
      "CSFEE-ORACLE-CONSENSUS-HASH-CONTRACT-SET",
      "🚨 CSFeeOracle: Consensus hash contract set",
      "Consensus hash contract set to [0xbF38618Ea09B503c1dED867156A0ea276Ca1AE37](https://etherscan.io/address/0xbF38618Ea09B503c1dED867156A0ea276Ca1AE37), previous contract was [0x0000000000000000000000000000000000000000](https://etherscan.io/address/0x0000000000000000000000000000000000000000)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xbF38618Ea09B503c1dED867156A0ea276Ca1AE37,0x0000000000000000000000000000000000000000",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "CSFEE-ORACLE-CONSENSUS-VERSION-SET",
      "🔴 CSFeeOracle: Consensus version set",
      "Consensus version set to 1, previous version was 0",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "1,0",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "CSFEE-ORACLE-FEE-DISTRIBUTOR-CONTRACT-SET",
      "🔴 CSFeeOracle: New CSFeeDistributor set",
      "New CSFeeDistributor contract set to [0xD7ba648C8F72669C6aE649648B516ec03D07c8ED](https://etherscan.io/address/0xD7ba648C8F72669C6aE649648B516ec03D07c8ED)",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0xD7ba648C8F72669C6aE649648B516ec03D07c8ED",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "CSFEE-ORACLE-PERF-LEEWAY-SET",
      "🔴 CSFeeOracle: Performance leeway updated",
      "Performance leeway set to 500 basis points",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "500",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`CSFeeOracle and HashConsensus events tests 🔴 HashConsensus: FrameConfig Set 1`] = `
[
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "HASH-CONSENSUS-FRAME-CONFIG-SET",
      "🔴 HashConsensus: Frame config set",
      "Frame configuration set. New initial epoch: 48038396020868878, Epochs per frame: 1575",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "48038396020868878,1575",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`CSFeeOracle and HashConsensus events tests 🔴 HashConsensus: Member Removed, Quorum Set, Consensus Reached, Report Submitted 1`] = `
[
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "HASH-CONSENSUS-MEMBER-REMOVED",
      "🔴 HashConsensus: Member removed",
      "Member [0x4c75FA734a39f3a21C57e583c1c29942F021C6B7](https://etherscan.io/address/0x4c75FA734a39f3a21C57e583c1c29942F021C6B7) removed. Total members: 9, New quorum: 5",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0x4c75FA734a39f3a21C57e583c1c29942F021C6B7,9,5",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "HASH-CONSENSUS-QUORUM-SET",
      "🔴 HashConsensus: Quorum set",
      "Quorum set to 5. Total members: 9, Previous quorum: 6",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "5,9,6",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      1,
      [],
      4,
      "HASH-CONSENSUS-REACHED",
      "🔵 HashConsensus: Consensus reached, report received",
      "Consensus reached for slot 2068159. Report hash: 0x3f42b4c85f55a07ab3f38c6c910871fd654fe9dfed64c9ff69e8ad4921fd487b, Support: 5",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "2068159,0x3f42b4c85f55a07ab3f38c6c910871fd654fe9dfed64c9ff69e8ad4921fd487b,5",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      1,
      [],
      4,
      "CSFEE-ORACLE-REPORT-SUBMITTED",
      "🔵 CSFeeOracle: Report submitted",
      "Report submitted for slot 2068159. Hash: 0x3f42b4c85f55a07ab3f38c6c910871fd654fe9dfed64c9ff69e8ad4921fd487b, Processing deadline time: 1721325108",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "2068159,0x3f42b4c85f55a07ab3f38c6c910871fd654fe9dfed64c9ff69e8ad4921fd487b,1721325108",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`CSFeeOracle and HashConsensus events tests 🔴 HashConsensus: Member added, Quorum Set 1`] = `
[
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "HASH-CONSENSUS-MEMBER-ADDED",
      "🔴 HashConsensus: Member added",
      "New member [0x4c75FA734a39f3a21C57e583c1c29942F021C6B7](https://etherscan.io/address/0x4c75FA734a39f3a21C57e583c1c29942F021C6B7) added. Total members: 10, New quorum: 6",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "0x4c75FA734a39f3a21C57e583c1c29942F021C6B7,10,6",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      4,
      [],
      4,
      "HASH-CONSENSUS-QUORUM-SET",
      "🔴 HashConsensus: Quorum set",
      "Quorum set to 6. Total members: 10, Previous quorum: 5",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "6,10,5",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;

exports[`CSFeeOracle and HashConsensus events tests 🔵 CSFeeOracle: Processing Started, Report Settled 1`] = `
[
  {
    "array": [
      "ethereum",
      1,
      [],
      4,
      "CSFEE-ORACLE-PROCESSING-STARTED",
      "🔵 CSFeeOracle: Processing started",
      "Processing started for slot 2068159. Hash: 0x3f42b4c85f55a07ab3f38c6c910871fd654fe9dfed64c9ff69e8ad4921fd487b",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "2068159,0x3f42b4c85f55a07ab3f38c6c910871fd654fe9dfed64c9ff69e8ad4921fd487b",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
  {
    "array": [
      "ethereum",
      1,
      [],
      4,
      "CSFEE-ORACLE-REPORT-SETTLED",
      "🔵 CSFeeOracle: Report settled",
      "Report settled for slot 2068159. Distributed: 219882093527933929, Tree root: 0xfe5c8e3e617728bb0cd034313cc615f79ff7e93ff2e747b99d39b7e36a65b56a, Tree CID: QmV9AfsMa4zV3J1AjMhNuTQP4F18eV3uY5ihbVFcT5SkW6",
      ,
      ,
      [],
      ,
      [],
      [],
    ],
    "arrayIndexOffset_": -1,
    "convertedPrimitiveFields_": {},
    "messageId_": undefined,
    "pivot_": 1.7976931348623157e+308,
    "wrappers_": {
      "3": {
        "arrClean": false,
        "arr_": [],
        "map_": {
          "args": {
            "key": "args",
            "value": "2068159,219882093527933929,0xfe5c8e3e617728bb0cd034313cc615f79ff7e93ff2e747b99d39b7e36a65b56a,QmV9AfsMa4zV3J1AjMhNuTQP4F18eV3uY5ihbVFcT5SkW6",
            "valueWrapper": undefined,
          },
        },
        "valueCtor_": null,
      },
    },
  },
]
`;
